--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ python-dateutil==2.8.2
 pytz==2023.3
 regex==2023.6.3
 requests==2.31.0
-resample==1.6.0
+scikit-resample==0.3.0
 scikit-learn==1.3.0
 scipy==1.11.1
 six==1.16.0
